[gd_scene load_steps=13 format=3 uid="uid://bqxt4qvvqx5lj"]

[ext_resource type="Script" path="res://scripts/menus/menu_settings.gd" id="1_1ptlj"]
[ext_resource type="FontFile" uid="uid://73eyyuro8nvv" path="res://assets/fonts/PirataOne.ttf" id="2_dluss"]
[ext_resource type="FontFile" uid="uid://cqxld14ctgocv" path="res://assets/fonts/MedulaOne.ttf" id="3_ox4q5"]
[ext_resource type="Texture2D" uid="uid://dtyf8s2ckqnhy" path="res://assets/particle/UI_Checked.png" id="4_wt1tp"]
[ext_resource type="Texture2D" uid="uid://blq7ieq5770aa" path="res://assets/particle/UI_Checkbox.png" id="5_7g1i2"]
[ext_resource type="Theme" uid="uid://cra8p8hxk35en" path="res://assets/ui/button_theme.tres" id="6_wlla4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6pq3q"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7gt4i"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2l1xx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_to0mj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8btkv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_d3r12"]

[node name="MenuSettings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1ptlj")

[node name="Settings_MC" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
theme_override_constants/margin_left = 60
theme_override_constants/margin_top = 60
theme_override_constants/margin_right = 60

[node name="Settings_VBox" type="VBoxContainer" parent="Settings_MC"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Tab_Vbox" type="VBoxContainer" parent="Settings_MC/Settings_VBox"]
layout_mode = 2

[node name="Header1_Label" type="Label" parent="Settings_MC/Settings_VBox/Tab_Vbox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.839216, 0.905882, 0.972549, 1)
theme_override_fonts/font = ExtResource("2_dluss")
theme_override_font_sizes/font_size = 140
text = "SETTINGS"
horizontal_alignment = 1

[node name="Settings_Tab_Hbox" type="VBoxContainer" parent="Settings_MC/Settings_VBox/Tab_Vbox"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="General_HBox" type="HBoxContainer" parent="Settings_MC/Settings_VBox/Tab_Vbox/Settings_Tab_Hbox"]
layout_mode = 2
alignment = 1

[node name="Display_VBox" type="VBoxContainer" parent="Settings_MC/Settings_VBox/Tab_Vbox/Settings_Tab_Hbox/General_HBox"]
layout_mode = 2

[node name="Display_Label" type="Label" parent="Settings_MC/Settings_VBox/Tab_Vbox/Settings_Tab_Hbox/General_HBox/Display_VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.756863, 0.85098, 0.94902, 1)
theme_override_fonts/font = ExtResource("3_ox4q5")
theme_override_font_sizes/font_size = 80
text = "GENERAL"
horizontal_alignment = 1

[node name="Full_HBox" type="HBoxContainer" parent="Settings_MC/Settings_VBox/Tab_Vbox/Settings_Tab_Hbox/General_HBox/Display_VBox"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="Full_Label" type="Label" parent="Settings_MC/Settings_VBox/Tab_Vbox/Settings_Tab_Hbox/General_HBox/Display_VBox/Full_HBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_ox4q5")
theme_override_font_sizes/font_size = 80
text = "Fullscreen Mode"

[node name="Full_Check" type="CheckBox" parent="Settings_MC/Settings_VBox/Tab_Vbox/Settings_Tab_Hbox/General_HBox/Display_VBox/Full_HBox"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_icons/checked = ExtResource("4_wt1tp")
theme_override_icons/unchecked = ExtResource("5_7g1i2")
theme_override_styles/normal = SubResource("StyleBoxEmpty_6pq3q")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_7gt4i")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_2l1xx")
theme_override_styles/hover = SubResource("StyleBoxEmpty_to0mj")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_8btkv")
theme_override_styles/focus = SubResource("StyleBoxEmpty_d3r12")

[node name="Audio_HBox" type="HBoxContainer" parent="Settings_MC/Settings_VBox/Tab_Vbox/Settings_Tab_Hbox"]
layout_mode = 2
alignment = 1

[node name="Audio_VBox" type="VBoxContainer" parent="Settings_MC/Settings_VBox/Tab_Vbox/Settings_Tab_Hbox/Audio_HBox"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Audio_Label" type="Label" parent="Settings_MC/Settings_VBox/Tab_Vbox/Settings_Tab_Hbox/Audio_HBox/Audio_VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.756863, 0.85098, 0.94902, 1)
theme_override_fonts/font = ExtResource("3_ox4q5")
theme_override_font_sizes/font_size = 80
text = "AUDIO"
horizontal_alignment = 1

[node name="Overall_HBox" type="HBoxContainer" parent="Settings_MC/Settings_VBox/Tab_Vbox/Settings_Tab_Hbox/Audio_HBox/Audio_VBox"]
layout_mode = 2
theme_override_constants/separation = 25
alignment = 1

[node name="Overall_Label" type="Label" parent="Settings_MC/Settings_VBox/Tab_Vbox/Settings_Tab_Hbox/Audio_HBox/Audio_VBox/Overall_HBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_ox4q5")
theme_override_font_sizes/font_size = 80
text = "Overall"

[node name="Overall_Slider" type="HSlider" parent="Settings_MC/Settings_VBox/Tab_Vbox/Settings_Tab_Hbox/Audio_HBox/Audio_VBox/Overall_HBox"]
custom_minimum_size = Vector2(500, 75)
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("6_wlla4")
value = 100.0

[node name="Overall_Percent" type="Label" parent="Settings_MC/Settings_VBox/Tab_Vbox/Settings_Tab_Hbox/Audio_HBox/Audio_VBox/Overall_HBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_ox4q5")
theme_override_font_sizes/font_size = 80
text = "100%"

[node name="SFX_HBox" type="HBoxContainer" parent="Settings_MC/Settings_VBox/Tab_Vbox/Settings_Tab_Hbox/Audio_HBox/Audio_VBox"]
layout_mode = 2
theme_override_constants/separation = 25
alignment = 1

[node name="SFX_Label" type="Label" parent="Settings_MC/Settings_VBox/Tab_Vbox/Settings_Tab_Hbox/Audio_HBox/Audio_VBox/SFX_HBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_ox4q5")
theme_override_font_sizes/font_size = 80
text = "Effects"

[node name="SFX_Slider" type="HSlider" parent="Settings_MC/Settings_VBox/Tab_Vbox/Settings_Tab_Hbox/Audio_HBox/Audio_VBox/SFX_HBox"]
custom_minimum_size = Vector2(500, 75)
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("6_wlla4")
value = 100.0

[node name="SFX_Percent" type="Label" parent="Settings_MC/Settings_VBox/Tab_Vbox/Settings_Tab_Hbox/Audio_HBox/Audio_VBox/SFX_HBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_ox4q5")
theme_override_font_sizes/font_size = 80
text = "100%"

[node name="Music_HBox" type="HBoxContainer" parent="Settings_MC/Settings_VBox/Tab_Vbox/Settings_Tab_Hbox/Audio_HBox/Audio_VBox"]
layout_mode = 2
theme_override_constants/separation = 25
alignment = 1

[node name="Music_Label" type="Label" parent="Settings_MC/Settings_VBox/Tab_Vbox/Settings_Tab_Hbox/Audio_HBox/Audio_VBox/Music_HBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_ox4q5")
theme_override_font_sizes/font_size = 80
text = "Music"

[node name="Music_Slider" type="HSlider" parent="Settings_MC/Settings_VBox/Tab_Vbox/Settings_Tab_Hbox/Audio_HBox/Audio_VBox/Music_HBox"]
custom_minimum_size = Vector2(500, 75)
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("6_wlla4")
value = 100.0

[node name="Music_Percent" type="Label" parent="Settings_MC/Settings_VBox/Tab_Vbox/Settings_Tab_Hbox/Audio_HBox/Audio_VBox/Music_HBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_ox4q5")
theme_override_font_sizes/font_size = 80
text = "100%"

[node name="Tab_HBox" type="HBoxContainer" parent="Settings_MC/Settings_VBox/Tab_Vbox/Settings_Tab_Hbox"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Back_Button" type="Button" parent="Settings_MC/Settings_VBox/Tab_Vbox/Settings_Tab_Hbox/Tab_HBox"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
theme = ExtResource("6_wlla4")
text = " Back "

[connection signal="mouse_entered" from="Settings_MC/Settings_VBox/Tab_Vbox/Settings_Tab_Hbox/Tab_HBox/Back_Button" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="Settings_MC/Settings_VBox/Tab_Vbox/Settings_Tab_Hbox/Tab_HBox/Back_Button" to="." method="_on_back_button_pressed"]
